@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
 
+2011-12-18  Piotr Ożarowski
+	* Filmweb movie plugin updated (thanks to mariusz2806)
+
 2011-12-02  Michael Jahn
 	* [#888347] FilmAffinity plugin doesn't work
 	* [#897774] removal of the first added subtitle format is not possible
